@@ -4,12 +4,14 @@ import jakarta.persistence.*;
 import lombok.*;
 import org.hibernate.annotations.GenericGenerator;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 import java.util.UUID;
 
 @AllArgsConstructor
@@ -68,7 +70,7 @@ public class User implements UserDetails {
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
         // Retourner les rôles ou permissions ici
-        return Collections.emptyList(); // à remplacer si vous avez des rôles/permissions
+        return List.of(new SimpleGrantedAuthority(role.getNom()));
     }
 
     @Override
@@ -106,4 +108,7 @@ public class User implements UserDetails {
     protected void onUpdate() {
         this.modifiedAt = LocalDateTime.now();
     }
+
+
+
 }
